tests/semantic/valid/test_comparison_types.expected
=== Symbol Table ===
Scope: global (level 0)
  main: fn() -> void function [line 1]
Scope: function:main (level 1)
Scope: block (level 2)

=== Decorated AST ===
Program:
  FunctionDecl: main() -> void:
    Body:
      Block:
        VarDecl: int x = Literal: 5 (int) [type: int]
        VarDecl: float y = Literal: 3.14 (float) [type: float]
        VarDecl: bool z = Literal: True (bool) [type: bool]
        VarDecl: bool r1 = Binary(==) [type: None]:
        VarDecl: bool r2 = Binary(>) [type: None]:
        VarDecl: bool r3 = Binary(<=) [type: None]:
        VarDecl: bool r4 = Binary(&&) [type: None]:

=== Semantic Errors ===
Found 6 semantic error(s):

semantic error: undeclared identifier
  --> /Users/kseniakrukova/PycharmProjects/minicompiler/tests/semantic/valid/test_comparison_types.src:6:15
   = note: Проверьте имя переменной или добавьте объявление

semantic error: undeclared identifier
  --> /Users/kseniakrukova/PycharmProjects/minicompiler/tests/semantic/valid/test_comparison_types.src:7:15
   = note: Проверьте имя переменной или добавьте объявление

semantic error: undeclared identifier
  --> /Users/kseniakrukova/PycharmProjects/minicompiler/tests/semantic/valid/test_comparison_types.src:8:16
   = note: Проверьте имя переменной или добавьте объявление

semantic error: undeclared identifier
  --> /Users/kseniakrukova/PycharmProjects/minicompiler/tests/semantic/valid/test_comparison_types.src:8:27
   = note: Проверьте имя переменной или добавьте объявление

semantic error: undeclared identifier
  --> /Users/kseniakrukova/PycharmProjects/minicompiler/tests/semantic/valid/test_comparison_types.src:9:15
   = note: Проверьте имя переменной или добавьте объявление

semantic error: undeclared identifier
  --> /Users/kseniakrukova/PycharmProjects/minicompiler/tests/semantic/valid/test_comparison_types.src:9:21
   = note: Проверьте имя переменной или добавьте объявление

